# nagios-plugins

./: .copr.enc  .travis.yml  CAVEATS  README.md
check_apcext.pl/: check_apcext.pl  nagios-okplugin-apc.spec
check_apcext.pl/trunk/: README  check_apcext.pl  nagios-okplugin-apc.spec
check_bl/: README  nagios-okplugin-mailblacklist.spec
check_bl/trunk/: check_bl  nagios-okplugin-mailblacklist.spec
check_bond/: nagios-okplugin-bond.spec
check_bond.py/trunk/: check_bond.py
check_bond/nrpe.d/: check_bond.cfg
check_bond/trunk/: check_bond  nagios-okplugin-bond.spec
check_brocade/: nagios-okplugin-brocade.spec
check_brocade.pl/trunk/: check_brocade.pl
check_brocade/examples/: contactgroups.cfg  hostgroups.cfg  services.cfg
check_brocade/trunk/: README  check_brocade_interfaces.py
check_brocade_env.pl/trunk/: check_brocade_env.pl
check_ccm/trunk/: check_ccm.py
check_cifs/: check_cifs  nagios-okplugin-cifs.spec
check_cisco_qos/: check_cisco_qos.pl  check_cisco_qos.sh
check_cpu.py/: nagios-okplugin-check_cpu.spec  okplugin_check_cpu
check_cpu.sh/: check_cpu.sh  nagios-plugins-check_cpu.spec
check_dataprotector/: check_dp_services  check_dp_tablespace  check_dp_tablespace.sh  nagios-okplugin-check_dataprotector.spec
check_disks.pl/: check_disks.pl  nagios-okplugin-check_disks.spec
check_drbd/: nagios-okplugin-check_drbd.spec
check_emc_clariion/: check_emc_centera.pl  check_emc_clariion.pl  checkcommands.cfg
check_eva/: check_eva.py  nagios-okplugin-check_eva.spec
check_firewall_active/: check_firewall_active.sh  nagios-okplugin-check_firewall_active.spec
check_hpacucli/: README  check_hpacucli.py  nagios-okplugin-check_hpacucli.spec
check_hparray/: check_hparray  check_hparray.cfg
check_hpasm/: nagios-okplugin-check_hpasm.spec
check_hpssacli/: README  check_hpssacli.py  nagios-okplugin-check_hpssacli.spec
check_http_multi/: README.md  check_http_multi  nagios-okplugin-check_http_multi.spec
check_ibm_bladecenter/: README  check_ibm_bladecenter.py  nagios-okplugin-check_ibm_bladecenter.spec
check_ifoperstate/: README.md  check_ifoperstate  check_ifoperstate.py  nagios-okplugin-check_ifoperstate.spec
check_ipa/: README  README.md  check_ipa_replication  grant_anonymous_replication_view.ldif  nagios-okplugin-ipa.spec
check_ironport/: check_ironport  nagios-okplugin-check_ironport.spec
check_linux_modules.pl/: check_linux_modules.pl  check_linux_modules.spec
check_lvm_mirror/: check_lvm_mirror.py
check_msa_hardware-pl/: README.md  nagios-okplugin-check_msa.spec
check_mssql/: README  check_mssql_dbsize  nagios-okplugin-mssql.spec
check_mssql_health/: nagios-okplugin-mssql.spec
check_mssql_health/src/check_mssql_health-1.5.8.2/: ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.in  README  TODO  aclocal.m4  config.status  configure  configure.in
check_mssql_health/src/check_mssql_health-1.5.8.2/contrib/: README.formula  check_mssql_health.php  create_user.sql  delete_user.sql
check_mssql_health/src/check_mssql_health-1.5.8.2/plugins-scripts/: Makefile  Makefile.am  Makefile.in  check_mssql_health  check_mssql_health.pl  subst
check_mssql_health/src/check_mssql_health-1.5.8.2/plugins-scripts/Nagios/: Extraopts.pm
check_mssql_health/src/check_mssql_health-1.5.8.2/plugins-scripts/Nagios/DBD/MSSQL/: Server.pm
check_mssql_health/src/check_mssql_health-1.5.8.2/plugins-scripts/Nagios/DBD/MSSQL/Server/: Database.pm  Memorypool.pm
check_mssql_health/src/check_mssql_health-1.5.8.2/plugins-scripts/Nagios/DBD/MSSQL/Server/Database/: Datafile.pm
check_mssql_health/src/check_mssql_health-1.5.8.2/t/: Makefile  Makefile.in  check_mssql_health.t
check_mtr/: check_mtr
check_multipath/: README  check_multipath  nagios-okplugin-check_multipath-0.0.2-1.fc16.src.rpm  nagios-okplugin-check_multipath-0.0.2-1.fc16.x86_64.rpm  nagios-okplugin-check_multipath-0.0.3-1.el6.src.rpm  nagios-okplugin-check_multipath-0.0.3-1.el6.x86_64.rpm  nagios-okplugin-check_multipath.spec
check_nagios/: check_nagios_configuration  check_nagios_ghostservices  check_nagios_needs_reload  nagios-okplugin-check_nagios.spec
check_oracle_health/src/check_oracle_health-1.6.9/t/: Makefile.am  check_oracle_health.t
check_other/: README  check_other
check_package_updates/: README.md  check_package_updates  nagios-okplugin-check_package_updates.spec
check_pkgkit/: README.md  check_pkgkit
check_proc/: check_procs.sh
check_rhcs/: check_rhcs  check_rhcs.py  check_rhcs_cman_group.sh  check_rhcs_fence  nagios-okplugin-check_rhcs.spec
check_selinux/: check_selinux  nagios-plugins-check_selinux.spec
check_service.sh/: check_service.sh  nagios-plugins-check_service.spec
check_smssend/: check_smssend  nagios-okplugin-check_smssend.spec
check_snmp/: check_snmp_connectivity  check_snmp_cpfw.pl  check_snmp_interfaces  check_snmp_load.pl  check_snmp_mem.pl  check_snmp_temperature.pl  nagios-okplugin-check_snmp.spec
check_squid/: check_squid.pl
check_storwize/: README.md  check_storwize.py  nagios-okplugin-check_storwize.spec  test.sh
check_time/: check_time.sh  nagios-okplugin-check_time.spec
check_updates/: README.md  check_updates  nagios-okplugin-check_updates.spec
check_uptime/: nagios-okplugin-check_uptime.spec
check_veeam_agent_backup/: README  check_veeam_agent_backup.sh  nagios-okplugin-check_veeam_agent_backup.spec
check_vmware/: check_vmware_wbem  nagios-okplugin-check_vmware_wbem.spec
check_xroad_token/: check_xroad_token.sh  nagios-okplugin-check_xroad_token.spec  readme.md
check_yum/: check_yum  nagios-okplugin-check_yum.spec
crit2warn.sh/: nagios-okplugin-crit2warn.spec
misc/: check_mssql_query.py  check_nagios_ghostservices  check_oracle_query.py  check_ports  check_rhcs_manualfencing.sh  check_selinux.sh  check_snmp_tcpconnection.sh  check_tftp.py  nagios_autodiscover
nagios-okplugin-common/: nagios-okplugin-common.spec
nsclient/: install.bat
okc-get_network_stat/: nagios-okplugin-get_network_stat.spec  okc-get_network_stat
rel-eng/: releasers.conf
tests/: setup_tests.sh  test_inside_docker.sh
(+196 files in other folders)
